# AdeptTest

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
DataBase/: DBManager.cpp  DBManager.h  QueryExecutor.cpp  QueryExecutor.h  config
PostgresDocker/: Dockerfile  docker-compose.yml  init.sql
Server/: AdeptServer.cpp  AdeptServer.h
